--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,13 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>inventive-repo</id>
+            <url>https://repo.inventivetalent.org/content/groups/public/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.spigotmc</groupId>
@@ -60,7 +67,11 @@
             <type>jar</type>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.inventivetalent.npclib</groupId>
+            <artifactId>api</artifactId>
+            <version>1.8.6</version>
+        </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
