--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
             <version>1.8.6</version>
         </dependency>
         <dependency>
+            <groupId>org.inventivetalent</groupId>
+            <artifactId>hologramapi</artifactId>
+            <version>1.5.1</version>
+        </dependency>
+        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.2</version>
